--- a/index.html
+++ b/index.html
@@ -78,9 +78,6 @@
         <div id="output">Results will appear here...</div>
     </div>
 
-    <script>
-        // The actual JavaScript will be loaded by webpack
-        // This is just a placeholder for the HTML structure
-    </script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
